--- a/assets/styles/inicio.css
+++ b/assets/styles/inicio.css
@@ -28,6 +28,8 @@ body {
     padding-left: 2rem;
     padding-right: 2rem;}
 
+.collapsing {
+    transition: height 0.6s cubic-bezier(0.4, 0, 0.2, 1) !important;}
 /* =====================================================
    BASE / RESET LEVE
 ===================================================== */
@@ -660,3 +662,4 @@ button:focus,
 
     .rodape-info {
         font-size: 16px;}}
+
